--- a/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
+++ b/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
@@ -5,7 +5,7 @@
    "id": "3191ae5d",
    "metadata": {},
    "source": [
-    "# Lab 01 \u00b7 FastAPI, Vite, and Git\n",
+    "# Lab 01 · FastAPI, Vite, and Git\n",
     "\n",
     "*This lab notebook provides guided steps. All commands are intended for local execution.*"
    ]
@@ -44,18 +44,18 @@
     "**FastAPI in a nutshell.** [FastAPI](https://fastapi.tiangolo.com/) is an asynchronous Python web framework that automatically maps HTTP paths to Python callables called *path operations*. Typed request and response models built with [Pydantic](https://docs.pydantic.dev/) provide validation, while async support keeps expensive AI inference calls from blocking the event loop.\n",
     "\n",
     "#### Core building blocks\n",
-    "1. **Application entry point** \u2014 Create a `FastAPI()` instance in `app/main.py` and register startup/shutdown handlers to open or close model clients. [Docs: First Steps](https://fastapi.tiangolo.com/tutorial/first-steps/)\n",
-    "2. **Routers and path operations** \u2014 Organize endpoints in `routers/` modules with `APIRouter` to keep chat, embeddings, and admin surfaces separate. Mount each router in `main.py` to expose `/api/chat`, `/api/embeddings`, etc. [Docs: APIRouter](https://fastapi.tiangolo.com/tutorial/bigger-applications/)\n",
-    "3. **Pydantic models** \u2014 Declare request/response schemas in `schemas.py` so prompts, system messages, and model options are validated before invoking inference. [Docs: Request Body](https://fastapi.tiangolo.com/tutorial/body/)\n",
-    "4. **Dependency injection** \u2014 Use `Depends` to pass shared services (OpenAI client, vector store, cache) into route functions without manually instantiating them. This keeps AI integrations testable and configurable. [Docs: Dependencies](https://fastapi.tiangolo.com/tutorial/dependencies/)\n",
-    "5. **Background tasks** \u2014 Offload long-running work such as audit logging, metrics collection, or follow-up summarization via `BackgroundTasks`. Students can immediately see how to chain AI workflows beyond the initial response. [Docs: Background Tasks](https://fastapi.tiangolo.com/tutorial/background-tasks/)\n",
-    "6. **Interactive OpenAPI docs** \u2014 FastAPI generates `/docs` and `/redoc` from your type hints, letting you verify model contracts, stream responses, and share live documentation with teammates. [Docs: Interactive API docs](https://fastapi.tiangolo.com/features/#interactive-api-docs)\n",
+    "1. **Application entry point** — Create a `FastAPI()` instance in `app/main.py` and register startup/shutdown handlers to open or close model clients. [Docs: First Steps](https://fastapi.tiangolo.com/tutorial/first-steps/)\n",
+    "2. **Routers and path operations** — Organize endpoints in `routers/` modules with `APIRouter` to keep chat, embeddings, and admin surfaces separate. Mount each router in `main.py` to expose `/api/chat`, `/api/embeddings`, etc. [Docs: APIRouter](https://fastapi.tiangolo.com/tutorial/bigger-applications/)\n",
+    "3. **Pydantic models** — Declare request/response schemas in `schemas.py` so prompts, system messages, and model options are validated before invoking inference. [Docs: Request Body](https://fastapi.tiangolo.com/tutorial/body/)\n",
+    "4. **Dependency injection** — Use `Depends` to pass shared services (OpenAI client, vector store, cache) into route functions without manually instantiating them. This keeps AI integrations testable and configurable. [Docs: Dependencies](https://fastapi.tiangolo.com/tutorial/dependencies/)\n",
+    "5. **Background tasks** — Offload long-running work such as audit logging, metrics collection, or follow-up summarization via `BackgroundTasks`. Students can immediately see how to chain AI workflows beyond the initial response. [Docs: Background Tasks](https://fastapi.tiangolo.com/tutorial/background-tasks/)\n",
+    "6. **Interactive OpenAPI docs** — FastAPI generates `/docs` and `/redoc` from your type hints, letting you verify model contracts, stream responses, and share live documentation with teammates. [Docs: Interactive API docs](https://fastapi.tiangolo.com/features/#interactive-api-docs)\n",
     "\n",
     "#### Tooling and project layout for AI routes\n",
     "- **Local server:** Run `uvicorn app.main:app --reload` for fast feedback while editing routers or schemas. Enable hot reload so AI inference tweaks are visible immediately. [Docs: Uvicorn](https://fastapi.tiangolo.com/deployment/uvicorn/)\n",
     "- **Environment management:** Load `.env` files with `python-dotenv` or FastAPI settings management to inject API keys, base URLs, and model IDs without hardcoding secrets.\n",
     "- **Folder structure:** Start with `app/main.py`, `app/routers/`, `app/schemas.py`, and `app/services/ai.py`. Keep retry utilities, tracing helpers, and vector database adapters in `services/` so routes remain thin controllers.\n",
-    "- **Testing hooks:** Leverage FastAPI's `TestClient` to write unit tests that mock AI providers and confirm each router handles success, errors, and streaming payloads.\n",
+    "- **Testing hooks (Optional):** Leverage FastAPI's `TestClient` to write unit tests that mock AI providers and confirm each router handles success, errors, and streaming payloads.\n",
     "\n",
     "### Vite + React framework primer\n",
     "\n",
@@ -101,8 +101,8 @@
     "cd ai-web\n",
     "docker compose build\n",
     "docker compose up\n",
-    "# Backend \u2192 http://localhost:8000\n",
-    "# Frontend \u2192 http://localhost:5173\n",
+    "# Backend → http://localhost:8000\n",
+    "# Frontend → http://localhost:5173\n",
     "\n",
     "# Shut the stack down when finished exploring:\n",
     "docker compose down\n",
@@ -123,6 +123,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "960281ae",
    "metadata": {},
    "source": [
     "### Step 1: Manually create the FastAPI backend scaffold\n",
@@ -228,8 +229,7 @@
     "\n",
     "After pasting these files into your project, save everything before moving to the frontend setup.\n",
     "\n"
-   ],
-   "id": "960281ae"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,6 +242,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "425d46e3",
    "metadata": {},
    "source": [
     "### Step 2: Build the React/Vite frontend by hand\n",
@@ -291,10 +292,10 @@
     "\n",
     "  return (\n",
     "    <main style={{ padding: 24 }}> {/* Provide basic padding so the demo looks tidy. */}\n",
-    "      <h1>Lab 1 \u2014 Echo demo</h1> {/* Give the page a clear heading. */}\n",
+    "      <h1>Lab 1 — Echo demo</h1> {/* Give the page a clear heading. */}\n",
     "      <input value={msg} onChange={(event) => setMsg(event.target.value)} /> {/* Bind the input to state so the message updates as you type. */}\n",
     "      <button onClick={handleSend} disabled={loading}>Send</button> {/* Call handleSend and disable the button while loading. */}\n",
-    "      {loading && <p>Loading\u2026</p>} {/* Show a loading message when the API call is in progress. */}\n",
+    "      {loading && <p>Loading…</p>} {/* Show a loading message when the API call is in progress. */}\n",
     "      {error && <p style={{ color: 'red' }}>{error}</p>} {/* Render any errors in red so they stand out. */}\n",
     "      <pre>{response}</pre> {/* Display the echoed message in a preformatted block. */}\n",
     "    </main>\n",
@@ -408,8 +409,7 @@
     "\n",
     "After adding these files, double-check that each directory matches the paths shown above.\n",
     "\n"
-   ],
-   "id": "425d46e3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,6 +422,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a3b3e9a",
    "metadata": {},
    "source": [
     "### Step 3: Define Docker Compose manually\n",
@@ -459,8 +460,7 @@
     "\n",
     "Once the file is saved, you can run `docker compose up` from inside `ai-web` when you're ready to launch both services.\n",
     "\n"
-   ],
-   "id": "6a3b3e9a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -476,7 +476,7 @@
    "id": "a1022dda",
    "metadata": {},
    "source": [
-    "### FastAPI \u2194 Vite AI workflow checklist\n",
+    "### FastAPI ↔ Vite AI workflow checklist\n",
     "\n",
     "1. Scaffold FastAPI with a dedicated router for AI inference (e.g., `routers/inference.py`) and register it in `main.py`.\n",
     "2. Define `Pydantic` models for request payloads (prompt text, model options) and responses (structured outputs, tokens, metadata).\n",
