--- a/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
+++ b/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
@@ -5,7 +5,7 @@
    "id": "c6402875",
    "metadata": {},
    "source": [
-    "# Lab 02 \u00b7 HTTP Forms and Retry\n",
+    "# Lab 02 · HTTP Forms and Retry\n",
     "\n",
     "*This lab notebook provides guided steps. All commands are intended for local execution.*"
    ]
@@ -87,7 +87,7 @@
     "- Compose UI primitives in `src/components/` for buttons, toasts, and skeleton loaders so each AI workflow shares consistent feedback.\n",
     "- Track experiment flags (e.g., \"use streaming\", \"call fallback model\") with context providers or state libraries (Zustand, Redux Toolkit) when the app grows.\n",
     "\n",
-    "#### Backend \u2194 frontend toolchain overview\n",
+    "#### Backend ↔ frontend toolchain overview\n",
     "| Layer | Key tool | Purpose for this lab |\n",
     "| --- | --- | --- |\n",
     "| Backend runtime | FastAPI + Uvicorn | Serves async echo routes, enforces validation, exposes OpenAPI docs |\n",
@@ -191,7 +191,7 @@
     ");\n",
     "```\n",
     "\n",
-    "The first two requests return HTTP 503 errors, the third succeeds, and the UI recovers gracefully. Wrap longer-lived retry sequences in loading spinners, keep buttons disabled until the promise settles, and consider error boundaries to catch truly fatal issues. These guardrails help the codebase grow while staying aligned with the lab\u2019s resilient frontend architecture.\n",
+    "The first two requests return HTTP 503 errors, the third succeeds, and the UI recovers gracefully. Wrap longer-lived retry sequences in loading spinners, keep buttons disabled until the promise settles, and consider error boundaries to catch truly fatal issues. These guardrails help the codebase grow while staying aligned with the lab’s resilient frontend architecture.\n",
     "\n",
     "These commented snippets mirror the updates you will apply to `src/App.jsx` (and related hooks) so learners can translate the notebook guidance directly into the working project files.\n"
    ]
@@ -233,7 +233,7 @@
     "\n",
     "  return (\n",
     "    <main style={{ padding: 24 }}> {/* Provide basic padding so the layout has breathing room. */}\n",
-    "      <h1>Lab 2 \u2014 Echo with retries</h1> {/* Update the heading to reflect the new behavior in this lab. */}\n",
+    "      <h1>Lab 2 — Echo with retries</h1> {/* Update the heading to reflect the new behavior in this lab. */}\n",
     "      <form onSubmit={handleSend} style={{ display: 'grid', gap: 12, maxWidth: 360 }}> {/* Use a simple grid layout for the form controls. */}\n",
     "        <label htmlFor=\"msg\"> {/* Associate the label with the text input for accessibility. */}\n",
     "          Message to echo\n",
@@ -245,7 +245,7 @@
     "          disabled={loading}\n",
     "        /> {/* Bind the input to component state so the typed message is tracked. */}\n",
     "        <button type=\"submit\" disabled={loading}> {/* Submit the form and disable the button when loading. */}\n",
-    "          {loading ? 'Sending\u2026' : 'Send'} {/* Swap button text based on the loading state. */}\n",
+    "          {loading ? 'Sending…' : 'Send'} {/* Swap button text based on the loading state. */}\n",
     "        </button>\n",
     "      </form>\n",
     "      {error && <p style={{ color: 'red' }}>{error}</p>} {/* Show a user-friendly error when retries fail. */}\n",
@@ -289,7 +289,17 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "mitocluster",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
