Fix Gemini SDK dependency name

--- a/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
+++ b/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
@@ -195,7 +195,7 @@
     "uvicorn[standard]  # ASGI server used to run FastAPI inside the Docker container.\n",
     "pydantic  # Data validation library leveraged by FastAPI for request parsing.\n",
     "python-dotenv  # Helper to load environment variables from .env files when developing locally.\n",
-    "google-genai  # Placeholder SDK dependency that later labs will use to call the Gemini API.\n",
+    "google-generativeai  # Placeholder SDK dependency that later labs will use to call the Gemini API.\n",
     "faiss-cpu  # Vector search library installed now so future labs can reuse the same environment.\n",
     "numpy  # Numerical computing package required by FAISS and common ML workflows.\n",
     "```\n",
