--- a/ai-web/labs/Lab06_Embeddings_and_FAISS.ipynb
+++ b/ai-web/labs/Lab06_Embeddings_and_FAISS.ipynb
@@ -43,7 +43,7 @@
     "```bash\n",
     "cd ai-web/backend\n",
     ". .venv/bin/activate\n",
-    "pip install faiss-cpu google-genai numpy\n",
+    "pip install faiss-cpu google-generativeai numpy\n",
     "```"
    ]
   },
