--- a/ai-web/labs/Lab07_RAG_with_Citations.ipynb
+++ b/ai-web/labs/Lab07_RAG_with_Citations.ipynb
@@ -43,7 +43,7 @@
     "```bash\n",
     "cd ai-web/backend\n",
     ". .venv/bin/activate\n",
-    "pip install google-genai\n",
+    "pip install google-generativeai\n",
     "```"
    ]
   },
