--- a/ai-web/labs/Lab10_Evaluation_Latency_Cache.ipynb
+++ b/ai-web/labs/Lab10_Evaluation_Latency_Cache.ipynb
@@ -43,7 +43,7 @@
     "```bash\n",
     "cd ai-web/backend\n",
     ". .venv/bin/activate\n",
-    "pip install google-genai\n",
+    "pip install google-generativeai\n",
     "```"
    ]
   },
