Update lab notebooks and Gemini docs

--- a/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
+++ b/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
@@ -119,81 +119,31 @@
    "id": "530801d0",
    "metadata": {},
    "source": [
-    "### Step 1: Add a reusable retry helper\n",
+    "### Step 1: Inspect the reusable retry helper\n",
     "\n",
-    "Instead of executing a cell that writes the file for you, manually create `ai-web/frontend/src/lib/retry.js` and paste the commented implementation below. Read each line so you understand how the retry logic works before moving on.\n",
+    "The repository already ships with `ai-web/frontend/src/lib/retry.js`. Read it\n",
+    "line-by-line with students so they understand how the helper avoids unnecessary\n",
+    "waits after the final attempt.\n",
     "\n",
     "```javascript\n",
-    "export async function withRetry(fn, attempts = 2, delayMs = 400) { // Export a helper that re-runs a promise-returning function when it fails.\n",
-    "  let lastError; // Keep track of the last error so we can throw it if all retries are exhausted.\n",
-    "  for (let attempt = 0; attempt <= attempts; attempt += 1) { // Iterate from the initial try through the configured number of retries.\n",
+    "export async function withRetry(fn, attempts = 2, delayMs = 400) {\n",
+    "  let lastError;\n",
+    "  for (let attempt = 0; attempt <= attempts; attempt += 1) {\n",
     "    try {\n",
-    "      return await fn(); // If the function succeeds, immediately return its resolved value.\n",
+    "      return await fn();\n",
     "    } catch (error) {\n",
-    "      lastError = error; // Remember the error and keep looping to try again.\n",
+    "      lastError = error;\n",
     "    }\n",
-    "    await new Promise((resolve) => setTimeout(resolve, delayMs)); // Wait the requested delay before attempting again.\n",
+    "    if (attempt < attempts) {\n",
+    "      await new Promise((resolve) => setTimeout(resolve, delayMs));\n",
+    "    }\n",
     "  }\n",
-    "  throw lastError; // After all attempts fail, throw the final error so the caller can react.\n",
+    "  throw lastError;\n",
     "}\n",
     "```\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70dc57ad",
-   "metadata": {},
-   "source": [
     "\n",
-    "### Step 2: Form integration\n",
-    "The React form now leans on a reusable `withRetry` helper so network hiccups do not derail the student experience. The flow looks like this:\n",
-    "\n",
-    "1. Collect user input in local component state.\n",
-    "2. Call `withRetry` with an async function that posts the form data.\n",
-    "3. Retry the call if a transient failure occurs, backing off briefly between attempts.\n",
-    "4. Show a friendly message if every attempt fails, otherwise render the echoed response.\n",
-    "\n",
-    "```jsx\n",
-    "// Flow: collect input -> call withRetry -> update component state with the response\n",
-    "const sendEcho = () =>\n",
-    "  withRetry(\n",
-    "    () => post('/echo', { msg }), // Async callback posting the current message text to FastAPI\n",
-    "    2, // Retry up to two extra attempts for transient 5xx or network errors\n",
-    "    500, // Wait 500 ms between attempts before trying again\n",
-    "  );\n",
-    "```\n",
-    "\n",
-    "Because `withRetry` only depends on an async callback, you can scale the pattern across modules. For example, a profile page could share the helper from `src/lib/retry.js` and dial in its own policy:\n",
-    "\n",
-    "```jsx\n",
-    "// Flow: fetch profile data with the shared retry helper so the page stays resilient\n",
-    "const fetchProfile = () =>\n",
-    "  withRetry(\n",
-    "    () => api.getProfile(userId), // Invoke a module-level API client using the current userId\n",
-    "    3, // Allow three total attempts to tolerate slow or flaky upstream services\n",
-    "    800, // Back off 800 ms between retries (tweak or expand to exponential backoff as needed)\n",
-    "  );\n",
-    "```\n",
-    "\n",
-    "> Tip: pass higher attempt counts and delays when hitting slower services or when layering exponential backoff (`delayMs * attempt`).\n",
-    "\n",
-    "Larger forms follow the same controlled-input structure: hold each field in state, validate before submitting, and surface field-level errors next to the relevant inputs. When multiple fields need to submit together, build one payload object and reuse `withRetry` so the entire submission benefits from resilience.\n",
-    "\n",
-    "To see retries in action, the backend now exposes `/flaky-echo`. Point the helper at it during testing:\n",
-    "\n",
-    "```jsx\n",
-    "// Flow: exercise the flaky endpoint to watch retries resolve the request in development\n",
-    "await withRetry(\n",
-    "  () => post('/flaky-echo?failures=2', { msg }), // Endpoint intentionally fails twice before succeeding\n",
-    "  3, // Provide three total attempts so the third call can succeed\n",
-    "  500, // Pause half a second between attempts to avoid hammering the server\n",
-    ");\n",
-    "```\n",
-    "\n",
-    "The first two requests return HTTP 503 errors, the third succeeds, and the UI recovers gracefully. Wrap longer-lived retry sequences in loading spinners, keep buttons disabled until the promise settles, and consider error boundaries to catch truly fatal issues. These guardrails help the codebase grow while staying aligned with the lab’s resilient frontend architecture.\n",
-    "\n",
-    "These commented snippets mirror the updates you will apply to `src/App.jsx` (and related hooks) so learners can translate the notebook guidance directly into the working project files.\n"
+    "Ask the class why the `if (attempt < attempts)` guard matters—it prevents the\n",
+    "helper from sleeping after the final failure, keeping the UI responsive.\n"
    ]
   },
   {
@@ -201,67 +151,25 @@
    "id": "59c4d585",
    "metadata": {},
    "source": [
-    "### Step 2: Update `App.jsx` to use the retry helper and friendlier messaging\n",
+    "### Step 2: Follow the hook-driven echo workflow\n",
     "\n",
-    "Open `ai-web/frontend/src/App.jsx` in your editor and replace its contents with the fully annotated component shown below. This version imports the retry helper, wraps the network request, and surfaces a user-friendly error if all retries fail.\n",
+    "Instead of editing `App.jsx`, focus on the echo feature folder so instructors see\n",
+    "where retry logic lives today:\n",
     "\n",
-    "```jsx\n",
-    "import { useState } from 'react'; // Pull in React's state hook to manage component data.\n",
-    "import { post } from './lib/api'; // Import the API helper that wraps fetch for POST requests.\n",
-    "import { withRetry } from './lib/retry'; // Bring in the retry utility you created in Step 1.\n",
+    "1. **`features/echo/hooks/useEchoForm.js`** – Builds the `/flaky-echo` URL with a\n",
+    "   `failures` query parameter, wraps the POST call with `withRetry`, and manages\n",
+    "   UI state (`loading`, `error`, `response`). Walk through the `handleSubmit`\n",
+    "   callback to highlight how retries are triggered.\n",
+    "2. **`features/echo/components/EchoForm.jsx`** – Consumes the hook’s props to\n",
+    "   render the form, loading indicator, and retry messaging. Point out the\n",
+    "   `PropTypes` definitions so students remember to document component APIs.\n",
+    "3. **`src/App.jsx`** – Imports `useEchoForm`/`EchoForm` and renders them inside a\n",
+    "   layout section titled “Retrying echo service.” Reinforce that App stays tiny\n",
+    "   because the heavy lifting lives in the feature folder.\n",
     "\n",
-    "function App() { // Declare the main application component rendered by Vite.\n",
-    "  const [msg, setMsg] = useState('hello'); // Track the message that the user wants to send to the backend.\n",
-    "  const [response, setResponse] = useState(''); // Store the echoed response returned by the API.\n",
-    "  const [loading, setLoading] = useState(false); // Represent whether a request is in progress so the UI can disable controls.\n",
-    "  const [error, setError] = useState(''); // Hold a user-facing error message if all retries fail.\n",
-    "\n",
-    "  async function handleSend(event) { // Handle the form submission so we can prevent the default browser behavior.\n",
-    "    event.preventDefault(); // Stop the browser from refreshing the page when the form is submitted.\n",
-    "    setLoading(true); // Show the loading state while the request is running.\n",
-    "    setError(''); // Clear any previous error message before retrying.\n",
-    "    setResponse(''); // Reset the prior response so stale data is not displayed.\n",
-    "    try {\n",
-    "      const json = await withRetry(() => post('/echo', { msg }), 2, 500); // Attempt the POST request with up to two retries and a 500 ms delay.\n",
-    "      setResponse(json.msg); // Store the echoed message if the request eventually succeeds.\n",
-    "    } catch (err) {\n",
-    "      setError('A temporary issue was encountered. Please try again.'); // Present a friendly message if every retry fails.\n",
-    "    } finally {\n",
-    "      setLoading(false); // Stop the loading indicator regardless of success or failure.\n",
-    "    }\n",
-    "  }\n",
-    "\n",
-    "  return (\n",
-    "    <main style={{ padding: 24 }}> {/* Provide basic padding so the layout has breathing room. */}\n",
-    "      <h1>Lab 2 — Echo with retries</h1> {/* Update the heading to reflect the new behavior in this lab. */}\n",
-    "      <form onSubmit={handleSend} style={{ display: 'grid', gap: 12, maxWidth: 360 }}> {/* Use a simple grid layout for the form controls. */}\n",
-    "        <label htmlFor=\"msg\"> {/* Associate the label with the text input for accessibility. */}\n",
-    "          Message to echo\n",
-    "        </label>\n",
-    "        <input\n",
-    "          id=\"msg\"\n",
-    "          value={msg}\n",
-    "          onChange={(event) => setMsg(event.target.value)}\n",
-    "          disabled={loading}\n",
-    "        /> {/* Bind the input to component state so the typed message is tracked. */}\n",
-    "        <button type=\"submit\" disabled={loading}> {/* Submit the form and disable the button when loading. */}\n",
-    "          {loading ? 'Sending…' : 'Send'} {/* Swap button text based on the loading state. */}\n",
-    "        </button>\n",
-    "      </form>\n",
-    "      {error && <p style={{ color: 'red' }}>{error}</p>} {/* Show a user-friendly error when retries fail. */}\n",
-    "      {response && (\n",
-    "        <section>\n",
-    "          <h2>Server response</h2>\n",
-    "          <pre>{response}</pre>\n",
-    "        </section>\n",
-    "      )} {/* Render the echoed message with a subheading when available. */}\n",
-    "    </main>\n",
-    "  );\n",
-    "}\n",
-    "\n",
-    "export default App; // Export the component so main.jsx can render it.\n",
-    "```\n",
-    "\n"
+    "Have instructors demo the flow by opening the Vite dev server, typing a message,\n",
+    "setting `failures` to a higher number (via the hook default or query string), and\n",
+    "showing how the UI reports retries.\n"
    ]
   },
   {
@@ -272,10 +180,11 @@
     "## Validation / acceptance checks\n",
     "```bash\n",
     "# locally\n",
-    "curl -X POST http://localhost:8000/echo -H 'Content-Type: application/json' -d '{\"msg\":\"retry\"}'\n",
+    "curl -X POST \"http://localhost:8000/flaky-echo?failures=2\"   -H 'Content-Type: application/json'   -d '{\"msg\":\"retry\"}'\n",
     "```\n",
-    "- The echoed payload is returned successfully after transient failures are simulated.\n",
-    "- React development mode shows the described UI state without console errors."
+    "- The API returns a JSON payload that includes the echoed message and `attempts` count.\n",
+    "- React dev tools show the form disabling inputs during retries and displaying the\n",
+    "  friendly error message if every attempt fails.\n"
    ]
   },
   {
