Clarify Lab 03 frontend flow

--- a/ai-web/labs/Lab03_Gemini_Proxy_Chat.ipynb
+++ b/ai-web/labs/Lab03_Gemini_Proxy_Chat.ipynb
@@ -442,22 +442,19 @@
       "source": [
         "### Step 3: Demonstrate the Gemini lesson-outline feature\n",
         "\n",
-        "Show how the frontend consumes the new endpoint:\n",
+        "Frame the frontend as a Vite-powered React single-page app before you run the demo. This gives the user an architectural mental model and makes each source file easier to map to what appears in the browser.\n",
         "\n",
-        "1. **Hook (`features/gemini/hooks/useLessonOutlineForm.js`)** \u2013 Posts the topic\n",
-        "   to `/ai/lesson-outline`, manages loading/error state, and renders any structured\n",
-        "   outline returned by the backend. Compare its structure to `useEchoForm` so the\n",
-        "   shared pattern is obvious.\n",
-        "2. **Component (`features/gemini/components/LessonOutlineForm.jsx`)** \u2013 Presents\n",
-        "   the instructional copy, form fields, and formatted outline. Highlight how the\n",
-        "   component reads `form.outline` to create a bulleted list.\n",
-        "3. **App shell (`src/App.jsx`)** \u2013 Already renders the Gemini section under the\n",
-        "   heading \u201cGemini lesson outline builder.\u201d Reinforce that all AI features should\n",
-        "   follow this composition model.\n",
+        "- **Vite + `index.html`** \u2013 Vite serves `ai-web/frontend/index.html`, which mounts a root `<div>` that React uses as its rendering target. Vite also injects environment variables under the `import.meta.env` namespace so the browser knows where to send API calls.\n",
+        "- **Entry point (`src/main.jsx`)** \u2013 Calls `ReactDOM.createRoot(...).render(...)` to boot the React tree. `React.StrictMode` keeps runtime checks enabled in development and mirrors the scaffolding students see in earlier labs.\n",
+        "- **App shell (`src/App.jsx`)** \u2013 Imports feature hooks and components, calls the hooks to obtain stateful values, and spreads those values into the JSX. This file proves the pattern of \"compose with hooks, render with components\" that repeats across labs.\n",
         "\n",
-        "Encourage instructors to run the flow live, pointing out the loading indicator\n",
-        "and error alert when the backend raises `GeminiServiceError` (for example, by\n",
-        "commenting out `GEMINI_API_KEY`).\n"
+        "Then drill into the Gemini-specific pieces so the user can narrate how data flows from the form to FastAPI and back:\n",
+        "\n",
+        "1. **Hook (`features/gemini/hooks/useLessonOutlineForm.js`)** \u2013 Owns the React state for the controlled input (`topic`), derived output (`outline`), fetch status (`loading`), and any backend failure (`error`). The exported `handleSubmit` function prevents the default form post, trims whitespace, rejects empty strings, and calls the shared `post()` helper. The success branch stores the outline array; the error branch normalises FastAPI error shapes so the component can display readable feedback.\n",
+        "2. **HTTP helper (`src/lib/api.js`)** \u2013 Wraps `fetch` so every POST request inherits the same JSON headers, environment-aware base URL, and descriptive error handling. Highlight the `post()` function signature (`path`, `body`) and how it throws an Error when the response status is outside the 200 range.\n",
+        "3. **Component (`features/gemini/components/LessonOutlineForm.jsx`)** \u2013 Receives the hook output as props and focuses purely on markup. The JSX uses the controlled `topic` value, calls `setTopic` on every keystroke, disables the submit button while `loading` is `true`, prints the error paragraph when `error` has content, and renders an ordered list by mapping the `outline` array. Because the component is stateless, it can be reused in other demos with different hooks.\n",
+        "\n",
+        "Conclude by showing the form in the running Vite dev server. Narrate each UI state change (loading spinner text, validation message, outline rendering) as you submit topics so the user understands the entire frontend feedback loop.\n"
       ]
     },
     {
